hphp/test/slow/dv_array/parse-error4.php.expectf
Fatal error: Collection element cannot be marked as reference in %s/test/slow/dv_array/parse-error4.php on line 5